<resources>
    <string name="app_name">App quản lý cửa hàng</string>
    <string name="nav_shop">Cửa hàng</string>
    <string name="nav_trangchu">Trang chủ</string>
    <string name="nav_yeuthich">Thêm sản phẩm</string>
    <string name="nav_taikhoan">Tài khoản</string>
    <string name="nav_thongtin">Thông tin</string>
    <string name="nav_dangxuat">Đăng xuất</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>