<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_shop"
        android:title="@string/nav_shop"
        android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_trangchu"
            android:title="@string/nav_trangchu"
            android:icon="@drawable/ic_favorite"/>
    </group>

    <item android:title="@string/nav_taikhoan">

        <menu>
            <item android:id="@+id/nav_thongtin"
                android:title="@string/nav_thongtin"
                android:icon="@drawable/ic_myprofile"/>

            <item android:id="@+id/nav_dangxuat"
                android:title="@string/nav_dangxuat"
                android:icon="@drawable/ic_out_login"/>
        </menu>
    </item>

</menu>